syntax = "proto3";

package proto.email.v1;

option go_package = "github.com/codeclout/AccountEd/notifications";

import "email/v1/messages.proto";

service EmailNotificationService {
  rpc ValidateEmailAddress(ValidateEmailAddressRequest) returns (ValidateEmailAddressResponse);
}
